frontend/test/should_fail/index_exec_node_fromIndexMultipleFromTo_argument4_mismatch.grg
#using "index_exec_multiple_model.gm"

sequence s()
{
	{ i:set<Node>=nodesFromIndexMultipleFromTo(fooi, 0, 1, food, 42.0, "error") }
}
